2/24/11 change internal terminology from "problems" to "equations" in Game
2/24/11 consistent handling of vertical spacing in Game
2/24/11 rename "Balance Equation" tab to "Introduction"
2/24/11 rename "Game" tab to "Balancing Game"
2/24/11 make popups for game results draggable, in case they obscure something
2/24/11 reduce height of Game boxes since max coefficient is smaller
2/24/11 reduce max coefficient in Game to 7, delete 1 equation that had higher coefficents (P4 + 10Cl2 -> 4PCl5)
2/24/11 tweak atom scaling factor with KL, make smaller atoms smaller
2/24/11 tweak some molecule conformations with KL
2/23/11 fix recording of best times
2/23/11 create and center "Game Over" display at completion of game
2/23/11 add sounds to Game
2/23/11 indicators for 3 game outcomes: balanced, not balanced, balance but not simplified
2/23/11 make smiley face larger in first tab, smaller in Game tab
2/23/11 add smiley/frowny face to Game
2/23/11 disable highlight of arrows, etc. in Game while user is solving a problem
2/23/11 show correct answer in Game
2/23/11 refactor duplicate code in Game canvas
2/23/11 toggle Game coefficients between editable and read-only
2/23/11 partial implementation of game view
2/23/11 first pass at game model, untested and not hooked up to view
2/23/11 change stroke width to 1.5 for bars, arrows, equals sign, balance scale beam (to match look of 0.00.06)
2/23/11 workaround: scale spinners on Mac, set font size for spinners on other platforms
# 0.00.07 (49107) Feb 22, 2011
2/22/11 dev version to demonstrate rescaling of atoms
2/22/11 adjust model-view transform in AtomNode
2/22/11 scale spinners and radio buttons because setFont doesn't work on Mac
2/22/11 change scaling of everything in the view so that canvas transform is not scaling things up, this made molecules look fuzzy
2/22/11 fix test app to use same canvas size as the sim
2/22/11 tweak model-view transform so that 60 of largest atom fit on balance scale's beam