@@ -9,6 +9,7 @@ HIGH PRIORITY
 - rename package module.balanceequation to module.introduction
 - rename package module.balanceequation to module.introduction
 - Game: reward for perfect score
+- implement "Hide molecules" feature for Game
 
 MEDIUM PRIORITY
 - Game: rewrite GameScoreBoardNode to use Property<T>
