@@ -1,3 +1,4 @@
+2/24/11 rename GamePrompt to GameState, document the approach used in Game
 2/24/11 change internal terminology from "problems" to "equations" in Game
 2/24/11 consistent handling of vertical spacing in Game
 2/24/11 rename "Balance Equation" tab to "Introduction"
